test_scores/negative_dimers/features/P46937.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P46937.pkl.xz